<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="260dp"
        android:contentDescription="@string/img_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/txt_email_hint"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/purple2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/lbl_password_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/txt_password_hint"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/txt_email_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@android:style/Widget.Button"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/login_btn_background"
            android:text="@string/btn_login_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/lbl_reset_password_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_img_description"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_img_description"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_img_description"
            app:srcCompat="@drawable/google" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>